[tool.poetry]
name = "unity_helper"
description = "A runtime reflection toolkit for Unity applications, enabling real-time inspection and interaction with classes, methods, and fields and objects."
authors = ["Chasss"]
readme = "README.md"
license = "MIT"

packages = [
    { include = "unity_helper", from = "src" }
]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

repository = "http://github.com/chassss/unity_helper"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pylocalmem = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"