[tool.poetry]
name = "unity_helper"
version = "0.0.0"
description = "Runtime inspection toolkit for Unity IL2CPP applications — explore classes, methods, fields, and live objects in real time."
authors = ["Chasss"]
readme = "README.md"
license = "MIT"

packages = [
    { include = "unity_helper", from = "src" }
]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

repository = "http://github.com/chassss/unity_helper"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
keystone-engine = "^0.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"